--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,43 @@
-body {
+@install-navigate;
+
+body,
+html {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+}
+.app {
+  display: flex;
+  height: 100vh;
+  overflow: hidden;
+  background-color: rgb(179, 179, 179);
+  justify-content: space-between;
+  color: white;
+  flex-direction: row;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.app img {
+  height: 100%;
+}
+
+.app .hero-text {
+  width: 100%;
+  display: flex;
+  text-align: left;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  font-size: 50px;
+}
+
+.app .hero-text h1 {
+  margin: 0;
+}
+.app .hero-text h6{
+  color: rgb(90, 89, 89);
+  padding-left: 150px;
+  width: 100%;
+  margin-top: 50px;
+  margin-bottom: 200px;
 }
