--- a/src/index.css
+++ b/src/index.css
@@ -1,43 +1,10 @@
-@install-navigate;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 body,
 html {
   margin: 0;
   box-sizing: border-box;
 }
-.app {
-  display: flex;
-  height: 100vh;
-  overflow: hidden;
-  background-color: rgb(179, 179, 179);
-  justify-content: space-between;
-  color: white;
-  flex-direction: row;
-}
 
-.app img {
-  height: 100%;
-}
-
-.app .hero-text {
-  width: 100%;
-  display: flex;
-  text-align: left;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
-  font-size: 50px;
-}
-
-.app .hero-text h1 {
-  margin: 0;
-}
-.app .hero-text h6{
-  color: rgb(90, 89, 89);
-  padding-left: 150px;
-  width: 100%;
-  margin-top: 50px;
-  margin-bottom: 200px;
-}
