--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+/* 
+    CSS by Vedant Otari 
+    vedantmotari24@gmail.com
+*/
+
 body,
 html {
   margin: 0;
